# learn_mlir

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build_llvm.sh  build_npu_mlir.sh  build_npu_mlir_fixed.sh  env_setup.sh
10-diagnostic_system/: AGENTS.md  README.md
10-diagnostic_system/include/npu-mlir/Dialect/: CMakeLists.txt
10-diagnostic_system/include/npu-mlir/Dialect/Siren/Transforms/: CMakeLists.txt  CustomDiagnosticHandler.h  DiagRegisteredPass.h  DiagScopedPass.h  Passes.h  Passes.td
10-diagnostic_system/lib/Dialect/Siren/Transforms/: CMakeLists.txt  CustomDiagnosticHandler.cpp  DiagRegisteredPass.cpp  DiagScopedPass.cpp
10-diagnostic_system/test/: filecheck_diag_registered.mlir  filecheck_diag_scoped.mlir  lit.cfg.py
10-diagnostic_system/tools/: CMakeLists.txt
10-diagnostic_system/tools/diag-demo/: CMakeLists.txt  diag_demo.cpp  handler_demo.cpp
10-diagnostic_system/tools/npu-opt/: CMakeLists.txt  npu-opt.cpp
11-pdll/: AGENTS.md  CMakeLists.txt  README.md
11-pdll/tools/: CMakeLists.txt
11-pdll/tools/pdll_dce_demo/: CMakeLists.txt  dce_patterns.pdll  pdll_dce_demo.cpp
11-pdll/tools/pdll_fold_demo/: CMakeLists.txt  fold_patterns.pdll  pdll_fold_demo.cpp
11-pdll/tools/pdll_strength_demo/: CMakeLists.txt  pdll_strength_demo.cpp  strength_patterns.pdll
12-transform_dialect/: AGENTS.md  CMakeLists.txt  README.md
12-transform_dialect/test/: test_transform_basic.mlir  test_transform_loop.mlir  test_transform_passes.mlir  test_transform_structured.mlir
12-transform_dialect/tools/test/: CMakeLists.txt  test_transform_demo.cpp
2-define_dialect/: AGENTS.md  CMakeLists.txt
2-define_dialect/include/npu-mlir/Dialect/Siren/IR/: CMakeLists.txt  SirenDialect.h  SirenDialect.td
2-define_dialect/lib/Dialect/: CMakeLists.txt
2-define_dialect/lib/Dialect/Siren/IR/: CMakeLists.txt  SirenDialect.cpp
2-define_dialect/tools/npu/: CMakeLists.txt  npu-mlir.cpp
2-define_dialect/tools/npu-opt/: CMakeLists.txt  npu-opt.cpp
3-define_op/: AGENTS.md
3-define_op/include/npu-mlir/Dialect/Siren/IR/: CMakeLists.txt  SirenAttrs.td  SirenDialect.h  SirenDialect.td  SirenOps.h  SirenOps.td  SirenTypes.h  SirenTypes.td
3-define_op/include/npu-mlir/TypeTrait/: NpuTypeTraits.td  TypeTraits.h
3-define_op/lib/Dialect/Siren/IR/: SirenDialect.cpp  SirenOps.cpp
3-define_op/test/: filecheck_ops.mlir  lit.cfg.py  test_liveness.mlir
3-define_op/tools/npu/: CMakeLists.txt  npu-mlir.cpp
3-define_op/tools/npu-opt/: CMakeLists.txt  npu-opt.cpp
4-define_Interfaces/: AGENTS.md
4-define_Interfaces/include/npu-mlir/Dialect/Siren/IR/: CMakeLists.txt  SirenDialect.td
4-define_Interfaces/include/npu-mlir/Interfaces/: CMakeLists.txt  NpuDialectInterface.h
4-define_Interfaces/lib/Dialect/Siren/IR/: CMakeLists.txt  SirenDialect.cpp  SirenOps.cpp
4-define_Interfaces/lib/Interfaces/: CMakeLists.txt
4-define_Interfaces/test/: test_liveness.mlir
4-define_Interfaces/tools/: CMakeLists.txt
4-define_Interfaces/tools/npu/: CMakeLists.txt  npu-mlir.cpp
4-define_Interfaces/tools/npu-opt/: CMakeLists.txt
5-define_Traits/: AGENTS.md
5-define_Traits/include/npu-mlir/Dialect/Siren/IR/: SirenOps.h  SirenOps.td
5-define_Traits/include/npu-mlir/Interfaces/: NpuOpInterface.h  NpuOpInterface.td
5-define_Traits/include/npu-mlir/Traits/: NpuOpTraits.td  RequireTwoOperandsOneResult.h
5-define_Traits/lib/Interfaces/: NpuOpInterface.cpp
5-define_Traits/tools/npu/: CMakeLists.txt  npu-mlir.cpp
5-define_Traits/tools/npu-opt/: CMakeLists.txt
6-experiment/: AGENTS.md
6-experiment/include/: CMakeLists.txt
6-experiment/include/npu-mlir/Dialect/Siren/IR/: SirenOps.td
6-experiment/lib/Dialect/Siren/IR/: SirenDialect.cpp
6-experiment/test/: check.sh  test_action.mlir  test_reduce.mlir  test_traversal.mlir  users_and_uses.mlir
6-experiment/tools/: CMakeLists.txt
6-experiment/tools/npu/: CMakeLists.txt  npu-mlir.cpp
6-experiment/tools/npu-opt/: CMakeLists.txt  npu-opt.cpp
6-experiment/tools/test/: AGENTS.md  CMakeLists.txt  test_ADT.cpp  test_example.cpp  test_for_yield.cpp  test_traversal.cpp
7-table_gen/: AGENTS.md  learn_td.ipynb  readme.md
8-define_Pass/: AGENTS.md
8-define_Pass/include/npu-mlir/Dialect/Siren/IR/: SirenAttrs.h  SirenAttrs.td  SirenDialect.td  SirenOps.h  SirenOps.td  SirenTypes.td
8-define_Pass/include/npu-mlir/Dialect/Siren/Transforms/: CMakeLists.txt  Passes.h  Passes.td  TestPassOne.h
8-define_Pass/lib/Dialect/Siren/Transforms/: CMakeLists.txt  TestPassOne.cpp
8-define_Pass/test/: siren.mlir  test.dot
8-define_Pass/tools/npu/: CMakeLists.txt  npu-mlir.cpp
8-define_Pass/tools/npu-opt/: CMakeLists.txt  npu-opt.cpp
9-dataflow_analysis/: AGENTS.md  CMakeLists.txt  README.md
9-dataflow_analysis/include/: CMakeLists.txt
9-dataflow_analysis/include/npu-mlir/Dialect/Siren/Transforms/: CMakeLists.txt  ConstantPropAnalysis.h  Passes.h  Passes.td
9-dataflow_analysis/lib/Dialect/Siren/Transforms/: CMakeLists.txt  ConstantPropAnalysis.cpp
9-dataflow_analysis/test/: filecheck_const_prop.mlir  lit.cfg.py
9-dataflow_analysis/tools/npu-opt/: CMakeLists.txt  npu-opt.cpp
llvm/: CMakeLists.txt  toy.cpp
